--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -74,17 +74,16 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="119dp"
-        android:layout_height="39dp"
+        android:layout_width="291dp"
+        android:layout_height="42dp"
 
-        android:layout_marginTop="420dp"
+        android:layout_marginTop="44dp"
         android:text="OPCION DE CLASE:"
         android:textColor="@color/design_default_color_on_primary"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/SpDocente" />
 
     <TextView
         android:id="@+id/textView8"
@@ -127,9 +126,10 @@
         android:background="@drawable/customspiner"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
 
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView7"
         app:layout_constraintHorizontal_bias="0.615"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <Button
         android:id="@+id/btnguardarclase"
@@ -138,8 +138,9 @@
         android:layout_marginTop="36dp"
         android:text="GUARDAR"
         android:textSize="25dp"
-        app:layout_constraintTop_toTopOf="@+id/guideline11"
-        tools:layout_editor_absoluteX="148dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline11" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline11"
