--- a/app/src/main/res/layout/activity_inicio_de_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_de_sesion.xml
@@ -104,13 +104,13 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="57dp"
-        android:layout_height="61dp"
+        android:layout_width="103dp"
+        android:layout_height="43dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="9dp"
         android:layout_marginBottom="3dp"
-        android:text="Button"
+        android:text="Reset"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.0"
